# Technoculture-Research-python-internship

./: README.md
expense-tracker/: Readme.md  expenses.csv  main.py  manage.py  pyproject.toml
expense-tracker/expense/: settings.py  urls.py  wsgi.py
expense-tracker/expenses/: api.py  models.py  serializers.py  views.py
expense-tracker/expenses/migrations/: 0001_initial.py
expense-tracker/expenses/static/: styles.css
expense-tracker/expenses/templates/: index.html
taskflow/: pyproject.toml
taskflow/myapp/: models.py
taskflow/myapp/migrations/: 0001_initial.py
taskflow/taskflow/: asgi.py  settings.py
