[project]
name = "poetry add fastapi uvicorn django pydantic mysqlclient"
version = "poetry add --group dev mypy ruff"
description = ""
authors = [
    {name = "Bharathraj2107",email = "bharathraj2105@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
