[project]
name = "taskflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Bharathraj2107",email = "bharathraj2105@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "django (>=5.1.7,<6.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.9.10,<0.10.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "taskflow", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
